<resources>
    <string name="app_name">ElectionACMS</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="hello">Hello</string>
    <string-array name="voter_cadidate">
        <item>Voter</item>
        <item>Candidate</item>
    </string-array>
    <string name="enter_adhar">Enter AADHARNO</string>
    <string name="password">Password</string>
    <string name="not_reg">Not a registered voter/candidate?</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_can_list">canList</string>
    <string name="title_activity_candidate_prom">candidateProm</string>
    <string name="declaration"> I hereby declare that the information furnished above is true to the best of my knowledge. I am aware that making a statement or declaration which is false and which I know or believe to be false or do not believe to be true, is punishable under Section 31 of the Representation of the People Act, 1950 (43 of 1950).</string>
    <string name="title_activity_stats">stats</string>
    <string name="title_activity_rules">rules</string>

    <string name="profile">PROFILE</string>
    <string name="promisesandhistory">PROMISES AND HISTORY</string>
    <string name="candidatelist">CANDIDATE LIST</string>
    <string name="vote">VOTE</string>
    <string name="statistics">STATISTICS</string>
    <string name="rules">RULES</string>
    <string name="area">CANDIDATES IN YOUR AREA</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="registeredoffline">Registered offline?</string>
    <string name="entervotercandidate">Enter Voter/Candidate</string>
    <string name="registeronline">Register online</string>
    <string name="title_activity_no_majority">NoMajority</string>
</resources>
