<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".VoterProfileActivity"
    android:background="#fff"
    tools:showIn="@layout/navigation_bar_for_voter">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <GridLayout
        android:id="@+id/upper_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="1">

        <TextView
            android:id="@+id/nam"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/aad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            />
    </GridLayout>

    <TextView
        android:id="@+id/usage"
        android:layout_below="@+id/upper_grid"
        android:typeface="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:background="#1C2761"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usage"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text=""
        android:textColor="#1C2761"
        android:visibility="invisible"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:layout_below="@+id/usage"
        android:text="Result"
        android:gravity="center"
        android:textColor="#1C2761"
        android:visibility="invisible"
        android:onClick="click"/>

    <GridLayout
        android:id="@+id/row_grid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginLeft="25dp"
        android:rowCount="21"
        android:columnCount="2">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_rowSpan="6"
            android:onClick="onProfileClick"
            app:srcCompat="@drawable/profile" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="164dp"
            android:layout_height="150dp"
            android:layout_rowSpan="6"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:onClick="self"
            app:srcCompat="@drawable/area" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onProfileClick"
            android:text="@string/profile"
            android:textColor="#1C2761"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="self"
            android:text="@string/area"
            android:textColor="#1C2761"/>


    </GridLayout>

    <GridLayout
        android:id="@+id/row_grid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_grid1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:rowCount="21"
        android:columnCount="2">


        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_rowSpan="6"
            android:onClick="all"
            app:srcCompat="@drawable/list" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:onClick="votecheck"
            android:layout_rowSpan="6"
            app:srcCompat="@drawable/voteicon" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="all"
            android:text="@string/candidatelist"
            android:textColor="#1C2761"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="methodxyz"
            android:text="@string/vote"
            android:textColor="#1C2761"/>


    </GridLayout>

    <GridLayout
        android:id="@+id/row_grid3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_grid2"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:rowCount="21"
        android:columnCount="2">


        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_rowSpan="6"
            android:onClick="onStatisticsClick"
            app:srcCompat="@drawable/stats" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_rowSpan="6"
            android:onClick="onRulesClick"
            app:srcCompat="@drawable/rules" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onStatisticsClick"
            android:text="@string/statistics"
            android:textColor="#1C2761"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onRulesClick"
            android:text="@string/rules"
            android:textColor="#1C2761"/>
    </GridLayout>

    </RelativeLayout>
</ScrollView>